Bug 489234 - Replace new Integer(int) with Integer.valueOf() in eclipse.platform.ui plug-ins
These are the test plug-ins

Change-Id: I67d7d3e763841f601384403526ff0ea8222cde06
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>