@@ -30,7 +30,7 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
         ComputedValue cv = new ComputedValue(Integer.TYPE) {
             @Override
 			protected Object calculate() {
-                return new Integer(42);
+                return Integer.valueOf(42);
             }
         };
         assertEquals("value type should be the type that was set", Integer.TYPE, cv.getValueType());
@@ -50,14 +50,14 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
         ComputedValue cv = new ComputedValue() {
             @Override
 			protected Object calculate() {
-                return new Integer(42);
+                return Integer.valueOf(42);
             }
         };
-        assertEquals("Calculated value should be 42", new Integer(42), cv.getValue());
+        assertEquals("Calculated value should be 42", Integer.valueOf(42), cv.getValue());
     }
 
     public void testDependencyValueChange() throws Exception {
-        final WritableValue value = new WritableValue(new Integer(42), Integer.TYPE);
+        final WritableValue value = new WritableValue(Integer.valueOf(42), Integer.TYPE);
 
         ComputedValue cv = new ComputedValue() {
             @Override
@@ -68,7 +68,7 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
 
         assertEquals("calculated value should have been that of the writable value", value.getValue(), cv.getValue());
 
-        value.setValue(new Integer(44));
+        value.setValue(Integer.valueOf(44));
 
         assertEquals("calculated value should have been that of the writable value", value.getValue(), cv.getValue());
     }
@@ -97,12 +97,12 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
 
                 }
 
-                return new Integer(sum);
+                return Integer.valueOf(sum);
             }
         };
 
-        WritableValueExt value1 = new WritableValueExt(Integer.TYPE, new Integer(1));
-        WritableValueExt value2 = new WritableValueExt(Integer.TYPE, new Integer(1));
+        WritableValueExt value1 = new WritableValueExt(Integer.TYPE, Integer.valueOf(1));
+        WritableValueExt value2 = new WritableValueExt(Integer.TYPE, Integer.valueOf(1));
         values.add(value1);
         values.add(value2);
 
@@ -113,13 +113,13 @@ public class ComputedValueTest extends AbstractDefaultRealmTestCase {
         assertTrue(value2.hasListeners());
 
         //force the computed value to be stale
-        value2.setValue(new Integer(2));
+        value2.setValue(Integer.valueOf(2));
         //remove value2 from the values that are used to compute the value
         values.remove(value2);
 
         //force the value to be computed
         cv.getValue();
-        assertEquals(new Integer(1), cv.getValue());
+        assertEquals(Integer.valueOf(1), cv.getValue());
         assertTrue(value1.hasListeners());
         assertFalse("because value2 is not a part of the calculation the listeners should have been removed", value2.hasListeners());
     }
