@@ -75,7 +75,7 @@ public class IntegerToStringConverterTest extends TestCase {
 	public void testIllegalArgumentExceptionIfSourceIsNotExpectedType() throws Exception {
 		IntegerToStringConverter converter = IntegerToStringConverter.fromByte(false);
 		try {
-			converter.convert(new Integer(1));
+			converter.convert(Integer.valueOf(1));
 			fail("exception should have been thrown");
 		} catch (IllegalArgumentException e) {
 		}
