@@ -65,7 +65,7 @@ public class StringToShortConverterTest extends TestCase {
 	public void testThrowsIllegalArgumentExceptionIfAskedToConvertNonString()
 			throws Exception {
 		try {
-			converter.convert(new Integer(1));
+			converter.convert(Integer.valueOf(1));
 			fail("exception should have been thrown");
 		} catch (IllegalArgumentException e) {
 		}
