@@ -136,11 +136,11 @@ public class TabbedPropertySheetPageWithDecorations extends
 		Map tabToImageDecorationsMap = new HashMap();
 		for (int i = 0; i < tabItems.length; i++) {
 			if (tabItems[i].getText().equals("Name")) {
-				tabToImageDecorationsMap.put(tabItems[i], new Integer(5));
+				tabToImageDecorationsMap.put(tabItems[i], Integer.valueOf(5));
 			} else if (tabItems[i].getText().equals("Message")) {
-				tabToImageDecorationsMap.put(tabItems[i], new Integer(3));
+				tabToImageDecorationsMap.put(tabItems[i], Integer.valueOf(3));
 			} else {
-				tabToImageDecorationsMap.put(tabItems[i], new Integer(0));
+				tabToImageDecorationsMap.put(tabItems[i], Integer.valueOf(0));
 			}
 		}
 		return tabToImageDecorationsMap;
