@@ -94,7 +94,7 @@ public class TableViewerTest extends StructuredItemViewerTest {
 		try {
 			method = ColumnViewer.class.getDeclaredMethod("getViewerColumn", new Class[]{int.class});
 			method.setAccessible(true);
-			return (ViewerColumn) method.invoke(viewer, new Object[]{new Integer(index)});
+			return (ViewerColumn) method.invoke(viewer, new Object[]{Integer.valueOf(index)});
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
